--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -2090,6 +2090,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         Name                         Email TotalAmount\n",
+      "CustomerID                                                             \n",
+      "7                Anthony Wong       anthonywong@example.org      321.29\n",
+      "10               Scott Weaver       scottweaver@example.net      319.98\n",
+      "3                 Daniel Hunt        danielhunt@example.com      198.85\n",
+      "1           Michelle Gonzalez  michellegonzalez@example.net      197.75\n",
+      "9               Glenn Vasquez      glennvasquez@example.com      191.48\n",
+      "6             Cynthia Shelton    cynthiashelton@example.org      170.00\n",
+      "5            Stephanie Monroe   stephaniemonroe@example.net      110.16\n",
+      "2               Lauren Butler      laurenbutler@example.org       17.00\n",
+      "4                 James Clark        jamesclark@example.org       17.00\n",
+      "8                Fred Hopkins       fredhopkins@example.org        None\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT CustomerID, Name, Email, SUM(TotalAmount) AS TotalAmount FROM\n",
+    "(SELECT Customers.*, Orders.TotalAmount FROM Customers\n",
+    "LEFT JOIN Orders ON Customers.CustomerID=Orders.CustomerID) AS CustomersOrders\n",
+    "GROUP BY CustomerID\n",
+    "ORDER BY TotalAmount DESC;\n",
+    "\"\"\")\n",
+    "print(pd.DataFrame(data=cursor.fetchall(),\n",
+    "    columns=[\"CustomerID\", \"Name\", \"Email\", \"TotalAmount\"]).set_index(\"CustomerID\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2097,10 +2133,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Category</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Suits &amp; Sport Coats</th>\n",
+       "      <td>319.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Revenue\n",
+       "Category                   \n",
+       "Suits & Sport Coats  319.98"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\" SELECT Category, SUM(PricePerUnit) AS Revenue \n",
+    "FROM (SELECT Products.*, OrderDetails.PricePerUnit FROM Products\n",
+    "INNER JOIN OrderDetails\n",
+    "ON Products.ProductID=OrderDetails.ProductID) AS ProductsOrderDetails\n",
+    "GROUP BY Category\n",
+    "ORDER BY Revenue DESC\n",
+    "LIMIT 1;\n",
+    "\"\"\")\n",
+    "data = cursor.fetchall()\n",
+    "df = pd.DataFrame(data=data, columns=[\"Category\", \"Revenue\"])\n",
+    "df.set_index(\"Category\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6.3. Calculate the month-over-month growth rate in sales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Revenue         MoM\n",
+      "OrderDate                    \n",
+      "202007     264.00        None\n",
+      "202107     110.16  -58.272727\n",
+      "202203     197.75   79.511619\n",
+      "202207     198.85    0.556258\n",
+      "202211      17.00  -91.450842\n",
+      "202303      17.00    0.000000\n",
+      "202311     170.00  900.000000\n",
+      "202312      57.29  -66.300000\n",
+      "202402     191.48  234.229359\n",
+      "202404     319.98   67.108836\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "SELECT Period, Revenue,\n",
+    "        (Revenue - LAG(Revenue) OVER(ORDER BY Period))/LAG(Revenue) OVER(ORDER BY Period)*100\n",
+    "FROM (\n",
+    "    SELECT EXTRACT(YEAR_MONTH FROM OrderDate) AS Period, SUM(TotalAmount) AS Revenue\n",
+    "    FROM Orders GROUP BY Period\n",
+    ") AS MonthlyRevenue;\n",
+    "\"\"\")\n",
+    "print(pd.DataFrame(data=cursor.fetchall(),\n",
+    "    columns=[\"OrderDate\", \"Revenue\", \"MoM\"]).set_index(\"OrderDate\"))"
    ]
   },
   {
