--- a/assignment_07.ipynb
+++ b/assignment_07.ipynb
@@ -2,18 +2,453 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function warnings.filterwarnings(action, message='', category=<class 'Warning'>, module='', lineno=0, append=False)>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Business and Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business interest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The used car market in India is a dynamic and ever-changing landscape. Prices can fluctuate wildly based on a variety of factors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset can be used by car dealership business, which helps to sell and buy used cars."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Business Objective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - In order to have a high commission from the sold cars, business is interested in selling cars for **a high prices**.\n",
+    " - Additionally business is interested in **a big amount of deals** which increases overall profit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Business Constraint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However if you will be selling cars for unreasonably **high prices** you will get horrible reputation which affects **the amounts of deals**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Success Criteria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Satisfactory criteria from buyers and sellers of cars. The priority is given with respect to the context (e.g. we have a lot of sellers and very few buyers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis (EDA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars = pd.read_csv(\"https://raw.githubusercontent.com/DIG-Placements/Datasets/main/Car%20Dataset.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This data is collected from 'Car Dekho'.\n",
+    "- Secondary Data Source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following details of cars are included in the dataset:\n",
+    "\n",
+    "1) Car name\n",
+    "2) Year\n",
+    "3) Selling Price\n",
+    "4) Kms driven\n",
+    "5) Fuel\n",
+    "6) Seller type\n",
+    "7) Transmission\n",
+    "8) Owner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4340 entries, 0 to 4339\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   name           4340 non-null   object\n",
+      " 1   year           4340 non-null   int64 \n",
+      " 2   selling_price  4340 non-null   int64 \n",
+      " 3   km_driven      4340 non-null   int64 \n",
+      " 4   fuel           4340 non-null   object\n",
+      " 5   seller_type    4340 non-null   object\n",
+      " 6   transmission   4340 non-null   object\n",
+      " 7   owner          4340 non-null   object\n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 271.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Structured Data\n",
+    "- Cross-Sectional Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuousFeatures = ['selling_price', 'km_driven', 'year']\n",
+    "\n",
+    "nominalFeatures = ['name', 'fuel']\n",
+    "ordinalFeatures = ['transmission', 'seller_type', 'owner']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>selling_price</th>\n",
+       "      <th>km_driven</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>seller_type</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>owner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Maruti 800 AC</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Maruti Wagon R LXI Minor</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>135000</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hyundai Verna 1.6 SX</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Datsun RediGO T Option</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>46000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Honda Amaze VX i-DTEC</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>450000</td>\n",
+       "      <td>141000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>Second Owner</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       name  year  selling_price  km_driven    fuel  \\\n",
+       "0             Maruti 800 AC  2007          60000      70000  Petrol   \n",
+       "1  Maruti Wagon R LXI Minor  2007         135000      50000  Petrol   \n",
+       "2      Hyundai Verna 1.6 SX  2012         600000     100000  Diesel   \n",
+       "3    Datsun RediGO T Option  2017         250000      46000  Petrol   \n",
+       "4     Honda Amaze VX i-DTEC  2014         450000     141000  Diesel   \n",
+       "\n",
+       "  seller_type transmission         owner  \n",
+       "0  Individual       Manual   First Owner  \n",
+       "1  Individual       Manual   First Owner  \n",
+       "2  Individual       Manual   First Owner  \n",
+       "3  Individual       Manual   First Owner  \n",
+       "4  Individual       Manual  Second Owner  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4340, 8)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars['brand'] = cars.name.str.split().str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars.drop('name', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Model Building"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Model Deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Monitoring and Maintenance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [Mind Map](https://360digitmg.com/mindmap/data-science)\n",
+    "2. [Kaggle information about dataset - Car Dekho](https://www.kaggle.com/datasets/akshaydattatraykhare/car-details-dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
