--- a/assignment_07.ipynb
+++ b/assignment_07.ipynb
@@ -2,23 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function warnings.filterwarnings(action, message='', category=<class 'Warning'>, module='', lineno=0, append=False)>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -30,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +27,10 @@
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from scipy.stats import f_oneway, ttest_ind, mannwhitneyu, kruskal\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
    ]
   },
   {
@@ -116,6 +108,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**ML Success Criteria**: Get small RMSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exploratory Data Analysis (EDA)"
    ]
   },
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +336,7 @@
        "4  Individual       Manual  Second Owner  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +356,7 @@
        "(4340, 8)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +397,7 @@
        "1491"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +502,7 @@
        "1  First Owner  Maruti  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +951,7 @@
        "Third Owner           99304.506579  90000.0  2009.338816  2010.0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1052,7 @@
        "Third Owner           269474.003289  190000.0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,6 +1066,73 @@
    "metadata": {},
    "source": [
     "The `owner` fields seemas like affects the target variably significantly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.938684216471109e-54\n"
+     ]
+    }
+   ],
+   "source": [
+    "owners = ['Test Drive Car', 'First Owner', 'Second Owner', 'Third Owner', 'Fourth & Above Owner']\n",
+    "groups = [cars[cars['owner'] == owner]['selling_price'] for owner in owners]\n",
+    "\n",
+    "# Conduct ANOVA\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(p_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By analyzing the data with ANOVA, you've taken an important step in comparing the effect of different owners. Assuming an alpha of 0.05, the P-value indicates significant differences in owner groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      Multiple Comparison of Means - Tukey HSD, FWER=0.05                      \n",
+      "===============================================================================================\n",
+      "       group1               group2          meandiff   p-adj      lower        upper     reject\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "         First Owner Fourth & Above Owner -424735.7721    0.0  -597590.0917 -251881.4525   True\n",
+      "         First Owner         Second Owner  -254745.881    0.0  -309135.0967 -200356.6653   True\n",
+      "         First Owner       Test Drive Car  355656.9715 0.0703   -17485.1427  728799.0858  False\n",
+      "         First Owner          Third Owner -329162.9663    0.0  -421740.1019 -236585.8308   True\n",
+      "Fourth & Above Owner         Second Owner  169989.8911 0.0657    -6575.0261  346554.8083  False\n",
+      "Fourth & Above Owner       Test Drive Car  780392.7436    0.0   371183.7254 1189601.7619   True\n",
+      "Fourth & Above Owner          Third Owner   95572.8058 0.6535   -96227.8961  287373.5076  False\n",
+      "        Second Owner       Test Drive Car  610402.8526 0.0001   235527.4178  985278.2874   True\n",
+      "        Second Owner          Third Owner  -74417.0853  0.245  -173750.2632   24916.0925  False\n",
+      "      Test Drive Car          Third Owner -684819.9379    0.0 -1067107.6971 -302532.1787   True\n",
+      "-----------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform Tukey's HSD test\n",
+    "tukey_results = pairwise_tukeyhsd(\n",
+    "    cars['selling_price'], \n",
+    "    cars['owner'], \n",
+    "    alpha=.05\n",
+    ")\n",
+    "\n",
+    "print(tukey_results)"
    ]
   },
   {
@@ -1201,8 +1267,22 @@
     "\n",
     "- `km_driven` is positively correlated with `owner`\n",
     "- `year` is negatively correlated with `owner`\n",
-    "- the target variable (`selling_price`) is noticeably negatively correlated with `owner`"
+    "- the target variable (`selling_price`) is noticeably negatively correlated with `owner`\n",
+    "- we can order `owner` by \n",
+    "\n",
+    "    * Test Drive Car -> 0\n",
+    "    * First Owner -> 1\n",
+    "    * Second Owner -> 2\n",
+    "    * Third Owner -> 3\n",
+    "    * Fourth & Above Owner -> 4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1797,6 +1877,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TtestResult(statistic=41.186960999151225, pvalue=0.0, df=4338.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ttest_ind(cars[cars.transmission=='Automatic'].selling_price, cars[cars.transmission=='Manual'].selling_price))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MannwhitneyuResult(statistic=1451609.0, pvalue=6.04367828645156e-118)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mannwhitneyu(cars[cars.transmission=='Automatic'].selling_price, cars[cars.transmission=='Manual'].selling_price))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [
@@ -2117,32 +2231,120 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Multiple Comparison of Means - Tukey HSD, FWER=0.05               \n",
+      "================================================================================\n",
+      "  group1        group2        meandiff   p-adj     lower        upper     reject\n",
+      "--------------------------------------------------------------------------------\n",
+      "    Dealer       Individual -297317.4711    0.0 -345044.0629 -249590.8794   True\n",
+      "    Dealer Trustmark Dealer  193128.0901 0.0027   56252.6402  330003.5399   True\n",
+      "Individual Trustmark Dealer  490445.5612    0.0  358061.4024  622829.7199   True\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform Tukey's HSD test\n",
+    "tukey_results = pairwise_tukeyhsd(\n",
+    "    cars['selling_price'], \n",
+    "    cars['seller_type'], \n",
+    "    alpha=.05\n",
+    ")\n",
+    "\n",
+    "print(tukey_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KruskalResult(statistic=376.90124621472205, pvalue=1.4352722007408467e-82)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kruskal(cars[cars.seller_type=='Individual'].selling_price,\n",
+    "              cars[cars.seller_type=='Dealer'].selling_price,\n",
+    "              cars[cars.seller_type=='Trustmark Dealer'].selling_price))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Overall Conclusions**\n",
     "\n",
-    "- Cars are more expensive in Trustmark Dealer and Dealer than Individual"
+    "- Cars are more expensive in Trustmark Dealer and Dealer than Individual\n",
+    "- It suggests that we can order also `seller_type`:\n",
+    "    * Individual -> 0\n",
+    "    * Dealer -> 1\n",
+    "    * Trustmark Dealer -> 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['owner', 'brand', 'fuel', 'transmission', 'seller_type']"
+       "seller_type\n",
+       "Individual          3244\n",
+       "Dealer               994\n",
+       "Trustmark Dealer     102\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ordinalFeatures+nominalFeatures"
+    "cars.seller_type.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['brand', 'fuel', 'transmission', 'seller_type']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nominalFeatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordinalFeatures = ['owner', 'seller_type']\n",
+    "nominalFeatures = ['brand', 'fuel', 'transmission']"
    ]
   },
   {
